--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,3 +1,5 @@
-<p>
+<p [ngStyle]="{backgroundColor: getColor()}"
+class="{{serverStatus}}"
+>
     {{'Server'}} with ID {{serverId}} is {{getServerStatus()}}
 </p>
