--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,4 +1,4 @@
-<label> {{serverName}}</label>
+<label> Server name</label>
 <!--<input -->
         <!--type="text" -->
         <!--class="form-control" -->
@@ -8,11 +8,15 @@
         class="form-control"
         [(ngModel)]="serverName">
 <button class="btn btn-primary"
-        [disabled]="!allowNewServer"
+        [disabled]="!allowNewServer || !serverName.length "
     (click)="onCreateServer()">
     Add Server
 </button>
-<p [innerText]="serverCreationStatus"></p>
+<!--<p [innerText]="serverCreationStatus"></p>-->
+<p *ngIf="serverCreated">Server was created, server name is {{serverName}}</p>
+<!--<ng-template #noServer>-->
+    <!--<p>No server was created</p>-->
+<!--</ng-template>-->
+
 <hr>
-<app-server></app-server>
-<app-server></app-server>
+<app-server *ngFor="let server of servers"></app-server>
